# animalcula

./: .gitignore  AGENTS.md  ANIMALCULA_SPEC.md  CHANGELOG.md  CONTRIBUTING.md  MEMORY.md  README.md  WORKING_MEMORY.md  pyproject.toml
config/: default.yaml  display.yaml  nursery.yaml  turbo.yaml
config/sweeps/: phase1_balance.yaml  phase1_default_economy.yaml
docs/tuning/: phase1.md
scripts/: tune_phase1.py
src/animalcula/: __init__.py  cli.py  config.py
src/animalcula/analysis/: __init__.py  metrics.py  seedbank.py  sweep.py
src/animalcula/sim/: brain.py  energy.py  fields.py  genome.py  mutation.py  physics.py  seeding.py  types.py  world.py
src/animalcula/viz/: __init__.py  debug_viewer.py  payloads.py
src/animalcula/web/: __init__.py  app.py
tests/: test_brain.py  test_checkpoint.py  test_config.py  test_energy.py  test_events.py  test_fields.py  test_genome.py  test_metrics.py  test_mutation.py  test_physics.py  test_seedbank.py  test_sweep.py  test_tune_phase1.py  test_viewer.py  test_web.py  test_world.py
